from typing import Generic, TypeVar, Dict, Optional, List
from datetime import datetime

T = TypeVar('T')

class BufferEntry(Generic[T]):
    def __init__(self, key: str, data: T, isDirty: bool = False):
        self._key = key
        self._data = data
        self._isDirty = isDirty
        self._lastAccessed = datetime.now()
        self._pinCount = 0

    def getKey(self) -> str:
        return self._key

    def getData(self) -> T:
        return self._data

    def isDirty(self) -> bool:
        return self._isDirty

    def getLastAccessed(self) -> datetime:
        return self._lastAccessed

    def getPinCount(self) -> int:
        return self._pinCount

    def markDirty(self) -> None:
        #TODO: Mark entry as modified (needs to be written to disk)
        pass

    def markClean(self) -> None:
        #TODO: Mark entry as synchronized with disk
        pass

    def pin(self) -> None:
        #TODO: Increment pin count (prevent eviction while in use)
        pass

    def unpin(self) -> None:
        #TODO: Decrement pin count
        pass

    def updateAccessTime(self) -> None:
        #TODO: Update last accessed timestamp
        pass


class Buffer(Generic[T]):
    def __init__(self, maxSize: int = 100):
        self._maxSize = maxSize
        self._bufferPool: Dict[str, BufferEntry[T]] = {}
        self._accessOrder: List[str] = []  # For LRU eviction

    def get(self, key: str) -> Optional[T]:
        #TODO: Retrieve data from buffer if exists, update access order
        pass

    def put(self, key: str, data: T, isDirty: bool = False) -> None:
        #TODO: Add or update data in buffer, evict if necessary
        pass

    def remove(self, key: str) -> None:
        #TODO: Remove entry from buffer
        pass

    def isFull(self) -> bool:
        #TODO: Check if buffer is at capacity
        pass

    def isNearlyFull(self, threshold: float = 0.9) -> bool:
        #TODO: Check if buffer is near capacity (threshold percentage)
        pass

    def getDirtyEntries(self) -> List[BufferEntry[T]]:
        #TODO: Retrieve all dirty (modified) entries for flushing
        pass

    def flushDirtyEntries(self) -> List[BufferEntry[T]]:
        #TODO: Get dirty entries and mark them for writing to disk
        pass

    def evictEntry(self) -> Optional[str]:
        #TODO: Evict least recently used unpinned entry (LRU policy)
        pass

    def clear(self) -> None:
        #TODO: Clear all entries from buffer (use after checkpoint)
        pass

    def getSize(self) -> int:
        #TODO: Return current buffer size
        pass

    def getMaxSize(self) -> int:
        return self._maxSize

    def pinEntry(self, key: str) -> bool:
        #TODO: Pin entry to prevent eviction
        pass

    def unpinEntry(self, key: str) -> bool:
        #TODO: Unpin entry to allow eviction
        pass
